[gd_scene load_steps=2 format=2]

[ext_resource path="res://StatScreen.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 620.0
margin_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 39.0
margin_bottom = 300.0

[node name="Stat01" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 39.0
margin_bottom = 14.0
text = "Welt"

[node name="Stat02" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 18.0
margin_right = 39.0
margin_bottom = 32.0
text = "Coins:"

[node name="Stat03" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 36.0
margin_right = 39.0
margin_bottom = 50.0

[node name="Stat04" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 54.0
margin_right = 39.0
margin_bottom = 68.0

[node name="Stat05" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 72.0
margin_right = 39.0
margin_bottom = 86.0

[node name="Stat06" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 90.0
margin_right = 39.0
margin_bottom = 104.0
